--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -4,10 +4,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% TODO: Ersetzen Sie in den folgenden Zeilen die entsprechenden -Texte-
 %% mit den richtigen Werten.
-\newcommand{\theGroup}{IhreGruppennummer} % Beispiel: 42
-\newcommand{\theNumber}{IhreProjektnummer} % Beispiel: A123
-\author{Vorname1 Nachname1 \and Vorname2 Nachname2 \and Vorname3 Nachname3}
-\date{AktuellesSemester} % Beispiel: Wintersemester 2019/20
+\newcommand{\theGroup}{Team 103 } % Beispiel: 42
+\newcommand{\theNumber}{504: RSA} % Beispiel: A123
+\author{Guo Linfeng \and Özakay, Baris \and Zheng, Julian}
+\date{Wintersemester 2022/23} % Beispiel: Wintersemester 2019/20
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Diese Zeile bitte -nicht- aendern.
@@ -17,9 +17,14 @@
 \maketitle
 
 \section{Einleitung}
-
+Das Praktikum Aspekte der systemnahen Programmierung bei der Spieleentwicklung beschäftigt sich mit dem Programmieren von Prozessen auf niedriger Ebene. Dabei ist es wichtig die Schnittstellen zwischen Hardware and Software effectiktive zu nutzen. Man lernt außerdem bei dem Praktium das Umgehen vom Optimieren von Programmen sowie die Programmiersprache Assembler, AArch64. Assembler ermöglicht die Assemblersprache in Maschinensprache zu übersetzten und das Programmieren in Assembler ermöglicht eine bessere Leistung für das Programm. Diese Verbesserung spielt in vielen Bereciehen der Informatik eine wichtige Rolle.\newline Das Praktikum beinhaltet viele Themengebiete. Eines davon ist die Kryptographie. Kryptographie ist ein essentieller Bestandteil unserer heutigen Kommunikation. Unsere Aufgabe ist es mit dem RSA-Algorithmus zubeschäftigen. Der RSA-Algorthmus ist nach seinen Erfindern Rivest, Shamir and Adleman ernannt und hat in der heutigen Zeit seine Relevants nicht nachtgelassen. Er wird in Bereichen wie zum Beispiel bei Banken, Webservern oder E-Mails, für Sicherheit und Datenschutz verwendt. Wir werden uns mit der Implementierung in Assembler und C beschäftigen, die Funktionsweise von RSA auseinandersetzen, die Korrekheit der Implementierung zu überprüfen und die Performanz der Implementierung analysieren. Die Bearbeitung dieser Teilberecihe wird im Folgenden beschrieben.
 
 \section{Lösungsansatz}
+\subsection*{2.1 Funktionsweise von RSA }
+\subsection*{2.2 Primzahl Generierung }
+\subsection*{2.3 Der erweiterte Euklidische Algorithmus}
+\subsection*{2.4 Sicherheit von RSA}
+
 
 
 % TODO: Je nach Aufgabenstellung einen der Begriffe wählen
