--- a/Ausarbeitung/Ausarbeitung.bib
+++ b/Ausarbeitung/Ausarbeitung.bib
@@ -7,3 +7,24 @@
   note = {\url{http://www.intel.com/content/www/us/en/processors/architectures-software-developer-manuals.html},
    visited 2017-08-19}
 }
+@article{AttacksOnRSA,
+  author = {{Dan Boneh}},
+  title = {Twenty Years of Attacks on the RSA Cryptosystem},
+  year = {1999},
+  month = Feb,
+  organization = {Dan Boneh},
+  note = {\url{https://www.ams.org/journals/notices/199902/boneh.pdf?trk=199902boneh&cat=collection},
+   visited 2023-03-02}
+}
+@article{TheRSAAlgorithm,
+  author = {{Evgeny Milanov}},
+  title = {The RSA Algorithm},
+  year = {2009},
+  month = June,
+  organization = {Evgeny Milanov},
+  note = {\url{https://sites.math.washington.edu/~morrow/336_09/papers/Yevgeny.pdf},
+   visited 2023-03-02}
+}
+
+
+
