--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -34,6 +34,10 @@ Ein Schlüssel ist ein Tupel. Der öffentliche Schlüssel ist durch das Tupel (e
 \end{align}
 Außerdem muss e Teilerfremd zu $\varphi $(N) sein. $\varphi $(N) sei die Eulersche $\varphi $-Funktion.
 \begin{align}
+\varphi (N) = (p - 1)\cdot(q - 1)
+\end{align}
+Die Variable d lässt sich aus der untenstehende Formel berechnen.
+\begin{align}
 d \cdot e \equiv 1 \mod \varphi (N)
 \end{align}
 Nachdem man die Schlüssel generiert hat, kann man die Nachricht m mit Hilfe von e und N verschlüsseln und c ist die verschlüsselte Nachricht. Für die Entschlüsselung wird d verwendet.
